# SignAble

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: backend.yml  frontend.yml  processor.yml
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  railway.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/config/: configuration.ts
backend/src/documents/: documents.controller.ts  documents.module.ts  documents.service.ts  documents.worker.ts
backend/src/envelopes/: envelopes.controller.ts  envelopes.module.ts  envelopes.service.spec.ts  envelopes.service.ts
backend/src/fields/: fields.controller.ts  fields.module.ts  fields.service.spec.ts  fields.service.ts
backend/src/files/: files.controller.ts  files.module.ts
backend/src/health/: health.controller.ts
backend/src/notifications/: notifications.service.ts  notifications.worker.ts
backend/src/processor/: processor.module.ts  processor.service.ts
backend/src/queues/: queue-names.ts  queue-worker.ts  queue.service.spec.ts  queue.service.ts  queue.types.ts  queues.module.ts
backend/src/recipients/: recipients.controller.ts  (+2 more)
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
processor/: .dockerignore  Dockerfile  pyproject.toml
processor/src/: format_converter.py  main.py  pdf_processor.py  pdf_renderer.py  signature_applier.py
(+152 files in other folders)
