[project]
name = "signable-processor"
version = "0.1.0"
description = "SignAble document processor service (PDF extraction, rendering, signature application)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "python-multipart>=0.0.6",
  "pdf2image>=1.17",
  "pypdf>=5.0",
  "reportlab>=4.2",
  "Pillow>=11.0",
  "pydantic>=2.0",
  # NOTE: doc_loader (pkg name `doc-converter`) is incompatible — ships broken
  # relative imports from its top-level `converters/` package. Using pypdf
  # directly until upstream restructures into a proper package.
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.28", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
